[project]
name = "rxahelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "hachitool>=1.0.2",
    "typer>=0.15.1",
]

[project.scripts]
rxahelper = "rxahelper.rxahelper:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
